# tv

./: .batch_download_progress.json  .download_progress.json  .gitignore  .torrent_finder_progress.json  DEPLOYMENT.md  README.md  add-collection-siblings.js  backfill-collection-parts.js  backfill-collections.js  backfill-episode-metadata.js  backfill-keywords.js  backfill-original-titles.js  backfill-pt-translations.js  backfill-similar.js  bloated-uploads.json  calculate-torrent-size.ts  clean-adult-mismatches.js  cleanup-stale-downloads.js  cleanup-unwanted-subtitle-languages.js  daemonize.js  demo-download-upload.sh  download-all-400.js  download-and-upload-to-railway.js  download-log.txt  download-specific-shows.js  download-trailers.js  find-bloated-uploads.js  fix-additional-mismatches.js  fix-brazilian-posters.js  generate-awards-backfill.js  ingest-course-zips.js  install-aria2.sh  original-titles-flagged.json  package-lock.json  package.json  pick-720p-log-2.txt  pick-720p-log-3.txt  pick-720p-log.txt  redo-bloated-uploads.js  resolve-oscars.js  (+9 more)
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/data/: awards_backfill.json  collection_parts.json  collections_backfill.json  enriched_400.json  enriched_400.json.bak-20260706-120249  enriched_400_backup.json  enriched_400_with_torrents.json  episode_metadata_backfill.json  keywords_backfill.json  oscars_best_picture_resolved.json  oscars_low_confidence_matches.json  similar_backfill.json  trailer_backfill.json
backend/migrations/: 0001_init.sql  0002_invites.sql  0003_profile_preferences_audit.sql  (+2 more)
(+103 files in other folders)
